static/scss/layout.scss
@import "bourbon";
@import "neat";
@import "grid-settings";
@import "variables";

$border-box-sizing: true !global;

body {
  background-color: #f6f6f6;
  font-family: 'Open Sans', sans-serif;
}

// public side of site
#public {
  position: relative;
  max-width: 900px;
  border: 1px solid grey;
  min-height: 900px;
  margin: 0 auto;
  background-color: white;
  color: black;

  .purpose-statement-box {
    width: 600px;
    border: 2px solid gray;
    margin: 50px auto;
    height: 200px;
    display: table;
  }
  .purpose-statement-text {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    padding: 0 40px;
    font-size: large;
    font-weight: bold;
  }

  .button {
    border: 1px solid gray;
    background-color: white;
    box-shadow: 2px 2px 1px #888888;
    padding: 20px 15px;
    text-decoration: none;
  }
  .button:hover {
    background-color: lightgrey;
  }
  .learn-more-btn {
    margin-top: 20px;
  }

  .login-button-wrapper {
    text-align: center;
  }
  .programs-container {
    margin: 100px 0;
    position: relative;
    padding: 0 40px;
    text-align: center;
  }
  .program-box {
    display: inline-block;
    width: 225px;
    border: 2px solid gray;
    margin: 10px;
    overflow: hidden;
  }
  .program-name {
    vertical-align: middle;
    display: inline-block;
  }
  .footer-row {
    font-size: 14px;
    margin: 0 30px;
    border-top: 3px solid grey;
    position: absolute;
    bottom: 15px;

  }
  .footer-links>a {
    display: inline-block;
    margin-right: 5px;
  }
}

// dashboard
#dashboard {
  #header {
    @include outer-container;

    border-bottom: 1px solid #dddddd;
    background-color: white;

    h1 {
      font-size: large;
      display: inline-block;
    }
    #navigation {
      button div span {
        text-transform: initial;
      }
    }

    a {
      text-decoration: none;
      color: inherit;
    }

    .header-logo {
      @include span-columns(3);
      padding: 25px 20px;
    }

    .header-logo-text {
      @include span-columns(1);
      font-size: large;
      font-weight: bold;
      padding: 35px 0;
    }

    .header-links-dashboard {
      @include span-columns(1);
      padding: 35px 0;
      font-size: small;
    }

    .header-links-login {
      @include span-columns(1);
      @include shift(5);
      padding: 25px 0;
      font-size: small;
    }
  }

  .main-content {
    @include outer-container;
    @include pad(20px);

    .card {
      border: 1px solid #dddddd;
      border-radius: 5px;
      background-color: white;
      .card-user {
        background-color: darkslategrey;
        background-image: url(/static/images/mit-stata-center.png);
        @include span-columns(12);
        .card-image-box {
          @include span-columns(2);
          min-width: 190px;
          height: 220px;
          padding-top: 40px;
          .card-image{
            border-radius: 50%;
            height: 140px;
            width: 140px;
            margin-left: 50px;
          }
        }
        .card-name {
          margin-top: 50px;
          color: white;
          font-size: 25px;
          line-height: 100px;
          height: 100px;
          @include span-columns(5);
        }

      }


      .card-header {
        padding: 25px;
        font-size: x-large;
        color: #b34a4c;
        font-weight: bold;
        @include span-columns(12);
      }

      .card-copy {
        @include outer-container;
        padding: 25px;
      }
    }
  }

  .course-list {
    @include outer-container;
    @include span-columns(8);
    border: 1px solid grey;

    ul {
      @include span-columns(8 of 8);
      border-bottom: 1px solid lightgray;
      margin: 0px;
    }
    ul:last-child {
      border-bottom: 0px;
    }

    .course-list-header {
      background-color: #eff5f7;
      font-weight: bold;
      font-size: larger;
    }

    li {
      @include span-columns(4 of 8);
      @include omega(2n);
      display: block;
      padding: 15px;
    }

    li:last-child {
      text-align: right;
    }
  }
}

.selected {
  font-weight: bold;
}

// Remove link styling
.no-hover {
  text-decoration: none !important;
  cursor: default !important;
  color: inherit !important;
}

.Select {
  // 300px seems to be what material-design-lite uses
  max-width: 300px !important;
}

// Wagtail responsive embeds
.rich-text img {
    max-width: 100%;
    height: auto;
}

.responsive-object {
    position: relative;
}

.responsive-object iframe,
.responsive-object object,
.responsive-object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

